--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -2,8 +2,10 @@
 <head>
 <title>Mailroom</title>
 </head>
-<body>
-	<h1>Donations</h1>
+<body>    <nav>
+        <a id="home" href="{{ url_for('all') }}">List Donations</a>
+        <a id="add donation" href="{{ url_for('add') }}">Add Donation</a>
+    </nav>
 	<h2>{% block subtitle %} {% endblock subtitle %}</h2>
 	{% block content %} {% endblock content %}
 </body>
