--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -2,7 +2,8 @@
 <head>
 <title>Mailroom</title>
 </head>
-<body>    <nav>
+<body>    
+    <nav>
         <a id="home" href="{{ url_for('all') }}">List Donations</a>
         <a id="add donation" href="{{ url_for('add') }}">Add Donation</a>
     </nav>
