--- a/templates/add_donations.jinja2
+++ b/templates/add_donations.jinja2
@@ -1,6 +1,6 @@
 {% extends 'base.jinja2' %}
 
-{% block subtitle %} add donation{% endblock subtitle %}
+{% block subtitle %} Add Donation{% endblock subtitle %}
 
 {% block content %}
 <form method="POST">
